--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "pinia": "^2.1.7",
     "vue": "^3.2.36",
     "vue-router": "^4.2.4"
   },
